third_party/move/move-compiler-v2/tests/checking/typing/constant_duplicate.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/checking/typing/constant_duplicate.move:3:11
  │
2 │     const LN2_X_32: u64 = 32 * 2977044472;
  │           -------- Alias previously defined here
3 │     const LN2_X_32: u64 = 32 * 2977044472;
  │           ^^^^^^^^ Duplicate module member or alias 'LN2_X_32'. Top level names in a namespace must be unique
