third_party/move/move-compiler-v2/tests/checking/typing/constant_duplicate.move
module 0x42::constant_duplicate {
    const LN2_X_32: u64 = 32 * 2977044472;
    const LN2_X_32: u64 = 32 * 2977044472;
}
